# sync-mtimes-from-google-drive

./: .gitignore  LICENSE  README.md  hello.py  main.py  pyproject.toml
.github/workflows/: ci.yml
