[project]
name = "sync-mtimes-from-google-drive"
version = "0.1.0"
description = "Sync mtimes from Google Drive, as it does not preserve them."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.0",
]

[tool.mypy]
strict = true
